feat : #8/유저 생성, 조회 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=capstone_design
+
+spring.datasource.url=jdbc:mariadb://svc.sel5.cloudtype.app:30300/capstone?useSSL=false&trustServerCertificate=true
+spring.datasource.username=jongbeom
+spring.datasource.password=ydk292811
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
