--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-//    implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0'
+//    implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0' // maria DB
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
 }
 
 tasks.named('test') {
